openWax 결과 보고 수정

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <nav class="group-main">
           <ul class="nav-list">
             <li class="nav-item">
-              <a href="" class="toMain" role="button" type="button">
+              <a href="" class="toMain">
                 <span class="top">TOP</span>
                 <span class="bottom" aria-hidden="true">TOP</span>
               </a>
@@ -83,7 +83,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a href="#qna">
+              <a href="">
                 <span class="top">Q&#38;A</span>
                 <span class="bottom" aria-hidden="true">Q&#38;A</span>
               </a>
@@ -121,12 +121,13 @@
             </p>
             <ul class="sns-list">
               <li class="sns-item" aria-labelledby="snslabel">
-                <a href="https://www.instagram.com/chanelofficial/?hl=en" id="instagram">
+                <a href="https://www.instagram.com/chanelofficial/?hl=en">
+                  <span class="blind">샤넬 인스타그램 링크</span>
                 </a>
               </li>
               <li class="sns-item" aria-labelledby="snslabel">
-                <a href="https://twitter.com/tekkenchanel?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"
-                  id="twitter">
+                <a href="https://twitter.com/tekkenchanel?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor">
+                  <span class="blind">샤넬 트위터 링크</span>
                 </a>
               </li>
             </ul>
@@ -150,7 +151,7 @@
           <picture>
             <source media="(min-width: 961px)" srcset="./assets/images/firstview_picture2.webp 2220w" sizes="100vw">
             <source media="(max-width: 960px)" srcset="./assets/images/firstview_picture2@sp.webp 1277w" sizes="100vw">
-            <img src="/assets/images/firstview_picture2.webp" alt>
+            <img src="./assets/images/firstview_picture2.webp" alt>
           </picture>
         </div>
         <div class="title-box">
@@ -684,10 +685,12 @@
             <ul class="sns-list">
               <li class="sns-item" aria-describedby="instagram">
                 <a href="https://www.instagram.com/chanelofficial/?hl=en">
+                  <span class="blind">샤넬 인스타그램 링크</span>
                 </a>
               </li>
               <li class="sns-item" aria-describedby="twitter">
                 <a href="https://twitter.com/tekkenchanel?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor">
+                  <span class="blind">샤넬 트위터 링크</span>
                 </a>
               </li>
             </ul>
@@ -727,7 +730,7 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a href="">
+                <a href="#">
                   <span class="top">Q&#38;A</span>
                   <span class="bottom" aria-hidden="true">Q&#38;A</span>
                 </a>
