wave 결과 보고 수정

--- a/index.html
+++ b/index.html
@@ -164,11 +164,11 @@
       <section class="section-concept">
         <div class="inner">
           <div class="content">
-            <h2 class="headline">
+            <h2 class="headline" aria-describedby="conceptDescription">
               CONCEPT
             </h2>
             <div class="text-box">
-              <p class="desc">
+              <p class="desc" id="conceptDescription">
                 In-depth study of the House’s emblematic <br>flower led CHANEL Research <br>to discover its
                 extraordinary levels<br>
                 of
@@ -211,7 +211,7 @@
       </section>
       <section class="section-about" id="about">
         <div class="background" data-scroll=""></div>
-        <h2 class="headline">
+        <h2 class="headline" aria-describedby="aboutDescription">
           ABOUT
         </h2>
         <strong class="title">
@@ -231,7 +231,7 @@
               alt>
           </picture>
         </div>
-        <div class="desc" data-scroll="">
+        <div class="desc" data-scroll="" id="aboutDescription">
           <div class="top">
             <picture>
               <!-- 961픽셀 이상 -->
@@ -267,12 +267,12 @@
         </div>
       </section>
       <section class="section-ethical" id="ethical">
-        <h2 class="headline">
+        <h2 class="headline" aria-describedby="ethicalDescription">
           ETHICAL
         </h2>
         <div class="inner">
           <div class="text-box">
-            <strong class="title">
+            <strong class="title" id="ethicalDescription">
               THE RESEARCH<br>
               INGREDIENT
               <!-- <br> 피부에 활력을 주는<br>
@@ -683,12 +683,12 @@
               <a href="">FOLLOW <br> US!</a>
             </p>
             <ul class="sns-list">
-              <li class="sns-item" aria-describedby="instagram">
+              <li class="sns-item">
                 <a href="https://www.instagram.com/chanelofficial/?hl=en">
                   <span class="blind">샤넬 인스타그램 링크</span>
                 </a>
               </li>
-              <li class="sns-item" aria-describedby="twitter">
+              <li class="sns-item">
                 <a href="https://twitter.com/tekkenchanel?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor">
                   <span class="blind">샤넬 트위터 링크</span>
                 </a>
