wave 결과 보고 수정

--- a/index.html
+++ b/index.html
@@ -119,12 +119,13 @@
             </p>
             <ul class="sns-list">
               <li class="sns-item" aria-labelledby="snslabel">
-                <a href="https://www.instagram.com/chanelofficial/?hl=en">
+                <a href="https://www.instagram.com/chanelofficial/?hl=en" class="instagram">
                   <span class="blind">샤넬 인스타그램 링크</span>
                 </a>
               </li>
               <li class="sns-item" aria-labelledby="snslabel">
-                <a href="https://twitter.com/tekkenchanel?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor">
+                <a href="https://twitter.com/tekkenchanel?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"
+                  class="twitter">
                   <span class="blind">샤넬 트위터 링크</span>
                 </a>
               </li>
@@ -680,12 +681,13 @@
             </p>
             <ul class="sns-list">
               <li class="sns-item">
-                <a href="https://www.instagram.com/chanelofficial/?hl=en">
+                <a href="https://www.instagram.com/chanelofficial/?hl=en" class="instagram">
                   <span class="blind">샤넬 인스타그램 링크</span>
                 </a>
               </li>
               <li class="sns-item">
-                <a href="https://twitter.com/tekkenchanel?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor">
+                <a href="https://twitter.com/tekkenchanel?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"
+                  class="twitter">
                   <span class="blind">샤넬 트위터 링크</span>
                 </a>
               </li>
