콘텐츠 추가해도 레이아웃 무너지지 않도록 수정, 개발 주석 추가, 필요없는 주석 제거

--- a/index.html
+++ b/index.html
@@ -43,11 +43,12 @@
       </button>
     </header>
 
-    <!-- [D] menu_button 을 클릭했을때, gnb에 class="is_active" 추가 -->
+    <!-- [D] .menu_button 을 클릭했을때, gnb에 class="is_active" 추가 -->
     <aside class="gnb">
       <nav class="nav">
         <ul class="nav_list">
           <li class="nav_item">
+            <!-- [D] .to_home 을 클릭했을때, gnb에 이미 class="is_active" 가 있다면 class="is_active" 제거 -->
             <a href="#" class="nav_link to_home">
               <span class="text_top">HOME</span>
               <span class="text_bottom" aria-hidden="true">HOME</span>
@@ -695,6 +696,7 @@
           <div class="links_area">
             <ul class="footer_nav_list">
               <li>
+                <!-- [D] .to_home 을 클릭했을때, gnb에 이미 class="is_active" 가 있다면 class="is_active" 제거 -->
                 <a href="#" class="footer_nav_link to_home">
                   <span class="text_top">TOP</span>
                   <span class="text_bottom" aria-hidden="true">TOP</span>
