라이트하우스 점수 높임

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <a href="#main">Skip to content</a>
     </div>
     <header class="header" id="header">
-      <button class="menu_button" aria-expanded="false" aria-haspopup="menu" aria-selected="false">
+      <button class="menu_button" aria-expanded="false" aria-haspopup="menu" aria-pressed="false" type="button">
         <span class="menu_text">
           <span class="menu_text_top">menu</span>
           <span class="menu_text_bottom" aria-hidden="true">menu</span>
@@ -349,8 +349,8 @@
                       <span class="text_bottom" aria-hidden="true">VIEW PRODUCT</span>
                     </span>
                     <div class="about_arrow">
-                      <button class="prev">
-                        <img src="./assets/images/ico_arrow.svg" alt="View more arrow icon" aria-selected="false">
+                      <button class="prev" aria-pressed="false">
+                        <img src="./assets/images/ico_arrow.svg" alt="View more arrow icon">
                       </button>
                       <button class="next" aria-hidden="true">
                         <img src="./assets/images/ico_arrow.svg" alt="">
@@ -623,7 +623,7 @@
               </ul>
             </div>
             <div class="control_area">
-              <button class="slide_btn btn_prev" aria-label="이전슬라이드" aria-selected="false"></button>
+              <button class="slide_btn btn_prev" aria-label="이전슬라이드" aria-pressed="false"></button>
               <button class="slide_btn btn_next" aria-label="다음슬라이드"></button>
             </div>
           </div>
