헤딩맵 오류 수정

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <ul class="nav_list">
           <li class="nav_item">
             <!-- [D] .to_home 을 클릭했을때, gnb에 이미 class="is_active" 가 있다면 class="is_active" 제거 -->
-            <a href="#" class="nav_link to_home">
+            <a href="" class="nav_link to_home">
               <span class="text_top">HOME</span>
               <span class="text_bottom" aria-hidden="true">HOME</span>
             </a>
@@ -79,7 +79,7 @@
             </a>
           </li>
           <li class="nav_item">
-            <a href="#" class="nav_link">
+            <a href="" class="nav_link">
               <span class="text_top">Q&amp;A</span>
               <span class="text_bottom" aria-hidden="true">Q&amp;A</span>
             </a>
@@ -88,20 +88,20 @@
             <p>ONLINE STORE</p>
             <ul class="sub_list">
               <li class="sub_item">
-                <a href="#" class="nav_link">
+                <a href="" class="nav_link">
                   <span class="text_top">- AMAZON STORE
                   </span>
                   <span class="text_bottom" aria-hidden="true">- AMAZON STORE</span>
                 </a>
               </li>
               <li class="sub_item">
-                <a href="#" class="nav_link">
+                <a href="" class="nav_link">
                   <span class="text_top">- RAKUTEN STORE</span>
                   <span class="text_bottom" aria-hidden="true">- RAKUTEN STORE</span>
                 </a>
               </li>
               <li class="sub_item">
-                <a href="#" class="nav_link">
+                <a href="" class="nav_link">
                   <span class="text_top">- OFFICIAL STORE</span>
                   <span class="text_bottom" aria-hidden="true">- OFFICIAL STORE</span>
                 </a>
@@ -112,26 +112,28 @@
         <div class="social_contact_area">
           <div class="social_box">
             <p class="title" id="sns_label">
-              <a href="#">FOLLOW US!</a>
+              FOLLOW US!
             </p>
             <ul class="sns_list">
               <li class="sns_item" aria-labelledby="sns_label">
-                <a href="https://www.instagram.com/chanelofficial/?hl=en" class="instagram" aria-label="Chanel Instagram link">
+                <a href="https://www.instagram.com/chanelofficial/?hl=en" class="instagram">
+                  <span class="blind">Chanel Instagram link</span>
                 </a>
               </li>
               <li class="sns_item" aria-labelledby="sns_label">
                 <a href="https://twitter.com/tekkenchanel?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"
-                  class="twitter" aria-label="Chanel Twitter link">
+                  class="twitter">
+                  <span class="blind">Chanel Twitter link</span>
                 </a>
               </li>
             </ul>
           </div>
           <div class="contact_box">
-            <a href="#" class="contact_link">
+            <a href="" class="contact_link">
               <span class="text_top">CONTACT US</span>
               <span class="text_bottom" aria-hidden="true">CONTACT US</span>
             </a>
-            <a href="#" class="contact_link">
+            <a href="" class="contact_link">
               <span class="text_top">PRIVACY POLICY</span>
               <span class="text_bottom" aria-hidden="true">PRIVACY POLICY</span>
             </a>
@@ -250,7 +252,7 @@
               allow <br>it to bloom
               during winter <br>at extreme temperatures.
             </p>
-            <a href="#" class="link_more">
+            <a href="" class="link_more">
               <p class="link_text">
                 <span class="text_top">VIEW ABOUT</span>
                 <span class="text_bottom" aria-hidden="true">VIEW ABOUT</span>
@@ -287,7 +289,7 @@
                   result of 17 years of research.<br>
                   At the heart of N°1 DE CHANEL is the Red Camellia, <br>a flower with revitalizing powers
                 </p>
-                <a href="#" class="link_more">
+                <a href="" class="link_more">
                   <p class="link_text">
                     <span class="text_top">VIEW RESEARCH</span>
                     <span class="text_bottom" aria-hidden="true">VIEW RESEARCH</span>
@@ -349,12 +351,12 @@
                       <span class="text_bottom" aria-hidden="true">VIEW PRODUCT</span>
                     </span>
                     <div class="about_arrow">
-                      <button class="prev" aria-pressed="false">
+                      <span class="prev">
                         <img src="./assets/images/ico_arrow.svg" alt="View more arrow icon">
-                      </button>
-                      <button class="next" aria-hidden="true">
+                      </span>
+                      <span class="next" aria-hidden="true">
                         <img src="./assets/images/ico_arrow.svg" alt="">
-                      </button>
+                      </span>
                     </div>
                   </a>
                 </div>
@@ -385,7 +387,7 @@
                       ₩119,000
                     </em>
                   </div>
-                  <a href="#" class="link_more">
+                  <a href="" class="link_more">
                     <p class="link_text">
                       <span class="text_top">VIEW PRODUCT</span>
                       <span class="text_bottom" aria-hidden="true">VIEW PRODUCT</span>
@@ -427,7 +429,7 @@
                       ₩107,000
                     </em>
                   </div>
-                  <a href="#" class="link_more">
+                  <a href="" class="link_more">
                     <p class="link_text">
                       <span class="text_top">VIEW PRODUCT</span>
                       <span class="text_bottom" aria-hidden="true">VIEW PRODUCT</span>
@@ -674,16 +676,18 @@
         <nav class="footer_nav">
           <div class="sns_box">
             <p class="title">
-              <a href="#">FOLLOW <br> US!</a>
+              FOLLOW <br> US!
             </p>
             <ul class="sns_list">
               <li class="sns_item">
-                <a href="https://www.instagram.com/chanelofficial/?hl=en" class="instagram" aria-label="Chanel Instagram link">
+                <a href="https://www.instagram.com/chanelofficial/?hl=en" class="instagram">
+                  <span class="blind">Chanel Instagram link</span>
                 </a>
               </li>
               <li class="sns_item">
                 <a href="https://twitter.com/tekkenchanel?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"
-                  class="twitter" aria-label="Chanel Twitter link">
+                  class="twitter">
+                  <span class="blind">Chanel Twitter link</span>
                 </a>
               </li>
             </ul>
@@ -692,7 +696,7 @@
             <ul class="footer_nav_list">
               <li>
                 <!-- [D] .to_home 을 클릭했을때, gnb에 이미 class="is_active" 가 있다면 class="is_active" 제거 -->
-                <a href="#" class="footer_nav_link to_home">
+                <a href="" class="footer_nav_link to_home">
                   <span class="text_top">TOP</span>
                   <span class="text_bottom" aria-hidden="true">TOP</span>
                 </a>
@@ -724,7 +728,7 @@
                 </a>
               </li>
               <li>
-                <a href="#" class="footer_nav_link">
+                <a href="" class="footer_nav_link">
                   <span class="text_top">Q&amp;A</span>
                   <span class="text_bottom" aria-hidden="true">Q&amp;A</span>
                 </a>
@@ -733,19 +737,19 @@
                 <p>ONLINE STORE</p>
                 <ul class="sub_list">
                   <li class="sub_item">
-                    <a href="#" class="footer_nav_link">
+                    <a href="" class="footer_nav_link">
                       <span class="text_top">- AMAZON STORE</span>
                       <span class="text_bottom" aria-hidden="true">- AMAZON STORE</span>
                     </a>
                   </li>
                   <li class="sub_item">
-                    <a href="#" class="footer_nav_link">
+                    <a href="" class="footer_nav_link">
                       <span class="text_top">- RAKUTEN STORE</span>
                       <span class="text_bottom" aria-hidden="true">- RAKUTEN STORE</span>
                     </a>
                   </li>
                   <li class="sub_item">
-                    <a href="#" class="footer_nav_link">
+                    <a href="" class="footer_nav_link">
                       <span class="text_top">- OFFICIAL STORE</span>
                       <span class="text_bottom" aria-hidden="true">- OFFICIAL STORE</span>
                     </a>
@@ -754,11 +758,11 @@
               </li>
             </ul>
             <div class="contact_box">
-              <a href="#" class="contact_link">
+              <a href="" class="contact_link">
                 <span class="text_top">CONTACT US</span>
                 <span class="text_bottom" aria-hidden="true">CONTACT US</span>
               </a>
-              <a href="#" class="contact_link">
+              <a href="" class="contact_link">
                 <span class="text_top">PRIVACY POLICY</span>
                 <span class="text_bottom" aria-hidden="true">PRIVACY POLICY</span>
               </a>
